dotnet/versioned_docs/version-1.14/network.mdx
---
id: network
title: "Network"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright provides APIs to **monitor** and **modify** network traffic, both HTTP and HTTPS. Any requests that page does, including [XHRs](https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest) and [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) requests, can be tracked, modified and handled.

- [HTTP Authentication](#http-authentication)
- [HTTP Proxy](#http-proxy)
- [Network events](#network-events)
- [Handle requests](#handle-requests)
- [Modify requests](#modify-requests)
- [Abort requests](#abort-requests)
- [WebSockets](#websockets)

<br/>

## HTTP Authentication

```csharp
using var context = await Browser.NewContextAsync(new BrowserNewContextOptions
{
    HttpCredentials = new HttpCredentials
    {
        Username = "bill",
        Password = "pa55w0rd"
    },
});
var page = await context.NewPageAsync();
await page.GotoAsync("https://example.com");
```

### API reference
- [Browser.NewContextAsync(options)](./api/class-browser.mdx#browser-new-context)

## HTTP Proxy

You can configure pages to load over the HTTP(S) proxy or SOCKSv5. Proxy can be either set globally for the entire browser, or for each browser context individually.

You can optionally specify username and password for HTTP(S) proxy, you can also specify hosts to bypass proxy for.

Here is an example of a global proxy:

```csharp
var proxy = new Proxy
{
    Server = "http://myproxy.com:3128",
    Username = "user",
    Password = "pwd"
};
await using var browser = await BrowserType.LaunchAsync(new BrowserTypeLaunchOptions
{
    Proxy = proxy
});
```

When specifying proxy for each context individually, you need to give Playwright a hint that proxy will be set. This is done via passing a non-empty proxy server to the browser itself. Here is an example of a context-specific proxy:

```csharp
var proxy = new Proxy { Server = "per-context" };
await using var browser = await BrowserType.LaunchAsync(new BrowserTypeLaunchOptions
{
    Proxy = proxy
});
using var context = await Browser.NewContextAsync(new BrowserNewContextOptions
{
    Proxy = new Proxy { Server = "http://myproxy.com:3128" })
});
```

## Network events

You can monitor all the requests and responses:

```csharp
using Microsoft.Playwright;
using System;

class Program
{
    public static async Task Main()
    {
        using var playwright = await Playwright.CreateAsync();
        await using var browser = await playwright.Chromium.LaunchAsync();
        var page = await browser.NewPageAsync();
        page.Request += (_, request) => Console.WriteLine(">> " + request.Method + " " + request.Url);
        page.Response += (_, response) => Console.WriteLine("<<" + response.Status + " " + response.Url);
        await page.GotoAsync("https://example.com");
    }
}
```

Or wait for a network response after the button click:

```csharp
// Use a glob URL pattern
var waitForResponseTask = page.WaitForResponseAsync("**/api/fetch_data");
await page.ClickAsync("button#update");
var response = await waitForResponseTask;
```

#### Variations

```csharp
// Use a regular expression
var waitForResponseTask = page.WaitForResponseAsync(new Regex("\\.jpeg$"));
await page.ClickAsync("button#update");
var response = await waitForResponseTask;

// Use a predicate taking a Response object
var waitForResponseTask = page.WaitForResponseAsync(r => r.Url.Contains(token));
await page.ClickAsync("button#update");
var response = await waitForResponseTask;
```

### API reference
- [Request]
- [Response]
- [event Page.Request](./api/class-page.mdx#page-event-request)
- [event Page.Response](./api/class-page.mdx#page-event-response)
- [Page.RunAndWaitForRequestAsync(action, urlOrPredicate, options)](./api/class-page.mdx#page-wait-for-request)
- [Page.RunAndWaitForResponseAsync(action, urlOrPredicate, options)](./api/class-page.mdx#page-wait-for-response)

<br/>

## Handle requests

You can mock API endpoints via handling the network quests in your Playwright script.

#### Variations

```csharp
await page.RouteAsync("**/api/fetch_data", async route => {
  await route.FulfillAsync(status: 200, body: testData);
});
await page.GotoAsync("https://example.com");
```

### API reference
- [BrowserContext.RouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-route)
- [BrowserContext.UnrouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-unroute)
- [Page.RouteAsync(url, handler)](./api/class-page.mdx#page-route)
- [Page.UnrouteAsync(url, handler)](./api/class-page.mdx#page-unroute)
- [Route]

<br/>

## Modify requests

```csharp
// Delete header
await page.RouteAsync("**/*", async route => {
    var headers = new Dictionary<string, string>(route.Request.Headers.ToDictionary(x => x.Key, x => x.Value));
    headers.Remove("X-Secret");
    await route.ContinueAsync(new RouteContinueOptions { Headers = headers });
});

// Continue requests as POST.
await page.RouteAsync("**/*", async route => await route.ContinueAsync(method: "POST"));
```

You can continue requests with modifications. Example above removes an HTTP header from the outgoing requests.

## Abort requests

```csharp
await page.RouteAsync("**/*.{png,jpg,jpeg}", route => route.AbortAsync());

// Abort based on the request type
await page.RouteAsync("**/*", async route => {
if ("image".Equals(route.Request.ResourceType))
    await route.AbortAsync();
else
    await route.ContinueAsync();
});
```

### API reference
- [Page.RouteAsync(url, handler)](./api/class-page.mdx#page-route)
- [BrowserContext.RouteAsync(url, handler)](./api/class-browsercontext.mdx#browser-context-route)
- [Route.AbortAsync(errorCode)](./api/class-route.mdx#route-abort)

<br/>

## WebSockets

Playwright supports [WebSockets](https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API) inspection out of the box. Every time WebSocket is created, [event Page.WebSocket](./api/class-page.mdx#page-event-web-socket) event is fired. This event contains the [WebSocket] instance for further web socket frames inspection:

```csharp
page.WebSocket += (_, ws) =>
{
    Console.WriteLine("WebSocket opened: " + ws.Url);
    ws.FrameSent += (_, f) => Console.WriteLine(f.Text);
    ws.FrameReceived += (_, f) => Console.WriteLine(f.Text);
    ws.Close += (_, ws1) => Console.WriteLine("WebSocket closed");
};
```

### API reference
- [WebSocket]
- [event Page.WebSocket](./api/class-page.mdx#page-event-web-socket)
- [event WebSocket.FrameSent](./api/class-websocket.mdx#web-socket-event-frame-sent)
- [event WebSocket.FrameReceived](./api/class-websocket.mdx#web-socket-event-frame-received)
- [event WebSocket.Close](./api/class-websocket.mdx#web-socket-event-close)

<br/>

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[URL]: https://nodejs.org/api/url.html "URL"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1?view=net-5.0 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2?view=net-5.0 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable?view=net-5.0 "IEnumerable"
[TResult]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task-1?view=net-5.0 "TResult"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
